improved home page

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -51,6 +51,15 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
+                    <a href="#filler">Filler</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#draw">Abstract Art</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#terms">Terms and Tags</a>
+                </li>
+                <li class="page-scroll">
                     <a href="#about">About this Challenge</a>
                 </li>
                 <li class="page-scroll">
@@ -126,7 +135,8 @@
     </div>
 </section>
 
-<section id="contact">
+<!-- Terms Section -->
+<section id="terms">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -234,6 +244,44 @@
     </div>
 </section>
 
+<section class="success" id="draw">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Abstract Art</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <p>Want to see your tweet or status update as an abstract art concept? Try out my super cool abstractifier thing!</p>
+                <p>It's still very new, so quality is not a guarantee but it is FREE!
+                    Simply click this link and go for it:
+                </p>
+                <p><h4><a href="/draw/" style="color: springgreen">Abstractify Text</a></h4></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="filler">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Filler Section</h2>
+                <hr class="star-primary">
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3>
+                        This is just filler because I wanted to keep the color pattern going. Have not thought of what
+                        I should actually put here.
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Footer -->
 <footer class="text-center">
